--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <title>CollaboArt</title>
   <script src= "http://cdnjs.cloudflare.com/ajax/libs/three.js/r58/three.min.js"></script>
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <script src="lib/dat.gui.js"></script>
   <script src="lib/FirstPersonControls.js"></script>
   <script src="lib/detector.js"></script>
   <script src="lib/stats.min.js"></script>
