--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CollaboArt</title>
+  <title>Indra's Net</title>
   <script src= "http://cdnjs.cloudflare.com/ajax/libs/three.js/r58/three.min.js"></script>
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script src="lib/dat.gui.js"></script>
