--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,16 @@
   color: #6d6d6d;
 }
 
+canvas{
+  position:absolute
+  top: 0px;}
+
 </style>
 
 <body>
   <div id = "imagine">"Imagine a multidimensional spider's web in the early morning covered with dew drops. And every dew drop contains the reflection of all the other dew drops. And, in each reflected dew drop, the reflections of all the other dew drops in that reflection. And so ad infinitum. That is the Buddhist conception of the universe in an image." -Alan Watts</div>
+
+  <audio src="audio/moonlight.mp3"></audio>
 
 </body>
 
