--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
   font-size: 1em;
   line-height: 1.5; 
   font-family: 'Helvetica Neue', Helvetica, Arial, serif;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
-  color: #6d6d6d;
+  color: #ffffff;
+  background: #000000;
 }
 
 canvas{
