--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@ canvas{
 
 
 <script> 
-  var introTime = 13000;
+  var introTime = 13600;
   var world = new World();
   world.init();
   world.animate();
@@ -45,16 +45,15 @@ canvas{
 
     var text = "Imagine a multidimensional spider's web in the early morning covered with dew drops.\
           And every dew drop contains the reflection of all the other dew drops. \
-          And, in each reflected dew drop, the reflections of all the other dew drops in that reflection.\
+          And, in each reflected dew drop, the reflections of all the other dew drops appear in that reflection.\
           And so ad infinitum. That is the Buddhist conception of the universe in an image. -Alan Watts";
     $imagine = $('<div id = "imagine"></div>');
     $imagine.text(text);
-    $('body').append($imagine).hide().fadeIn(introTime / 2, function() {
-      $imagine.fadeOut(introTime / 2);
-    });
+    $('body').append($imagine);
+      $imagine.fadeOut(introTime + 2000);
     setTimeout(function() {
-      
-        
+      $imagine.hide();
+      document.body.appendChild(world.renderer.domElement);
     }, introTime);
   }
 
