--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,16 @@
 
 <style>
  body {
-  font-size: 2em;
+  background-color: #000000;
+}
+
+.quote{
+  font-size: 1.5em;
   line-height: 1.5; 
+  width: 75%;
+  margin: 5% auto;
   font-family: 'Helvetica Neue', Helvetica, Arial, serif;
   color: #ffffff;
-  background-color: #000000;
-
 }
 #Watts {
   position: absolute;
@@ -48,10 +52,10 @@ canvas{
     song.play();
 
     var text = 
-    $imagine = $("<div>Imagine a multidimensional spider's web in the early morning covered with dew drops.\
+    $imagine = $("<div class = 'quote'>Imagine a multidimensional spider's web in the early morning covered with dew drops.\
           And every dew drop contains the reflection of all the other dew drops. \
           And, in each reflected dew drop, the reflections of all the other dew drops appear in that reflection.\
-          And so ad infinitum. That is the Buddhist conception of the universe in an image.</div><h2 id ='Watts'>Alan Watts</h2>");
+          And so ad infinitum. That is the Buddhist conception of the universe in an image. <h2 id ='Watts'>Alan Watts</h2></div>");
     $('body').append($imagine);
       $imagine.fadeOut(introTime + 4000);
     setTimeout(function() {
