--- a/public/index.html
+++ b/public/index.html
@@ -43,14 +43,14 @@ canvas{
 
 
 <script> 
-  var introTime = 13600;
+  var introTime = 200;
   //13600
   var world = new World();
   world.init();
   world.animate();
   var playSong = function(){
     var song = document.getElementById("song");
-    song.play();
+    //song.play();
 
     var text = 
     $imagine = $("<div class = 'quote'>Imagine a multidimensional spider's web in the early morning covered with dew drops.\
