changed song format

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@ canvas{
 
 <body>
 
-  <audio id= "song" src="audio/moonlight.mp3" onCanPlay = "playSong()"></audio>
+  <audio id= "song" src="audio/moonlight.ogg" onCanPlay = "playSong()"></audio>
 
 </body>
 
